--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,9 @@
         "designmynight"
     ],
     "require": {
-        "ext-mongodb": "*",
-        "illuminate/support": "^5.5 || ^6.0",
+        "illuminate/support": "^6.0",
         "jenssegers/mongodb": "3.3.* || 3.4.* || 3.5.* || 3.6.*",
-        "laravel/passport": "4.0.* || 5.0.* || 6.0.* || 7.0.* || 7.4.* || 7.5.* || ^8.0"
+        "laravel/passport": "^8.4"
     },
     "autoload": {
         "psr-4": {
